[workspace]
resolver = "2"
members = [
  "./packages/frontend/native",
  "./packages/frontend/native/schema",
  "./packages/backend/native",
]

[workspace.dependencies]
mimalloc = "0.1"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
