[workspace]
members  = ["./packages/backend/native", "./packages/frontend/native", "./packages/frontend/native/schema"]
resolver = "2"

[workspace.dependencies]
anyhow      = "1"
chrono      = "0.4"
dotenv      = "0.15"
file-format = { version = "0.25", features = ["reader"] }
mimalloc    = "0.1"
napi        = { version = "3.0.0-alpha.1", features = ["async", "chrono_date", "error_anyhow", "napi9", "serde"] }
napi-build  = { version = "2" }
napi-derive = { version = "3.0.0-alpha.1" }
notify      = { version = "6", features = ["serde"] }
once_cell   = "1"
parking_lot = "0.12"
rand        = "0.8"
serde       = "1"
serde_json  = "1"
sha3        = "0.10"
sqlx        = { version = "0.7", default-features = false, features = ["chrono", "macros", "migrate", "runtime-tokio", "sqlite", "tls-rustls"] }
tiktoken-rs = "0.5"
tokio       = "1.37"
uuid        = "1.8"
y-octo      = { git = "https://github.com/y-crdt/y-octo.git", branch = "main" }

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
strip         = "symbols"
