[package]
name = "ipc_types"
version = "0.1.0"

[dependencies]
jwst-storage = { path = "../../src-OctoBase/libs/jwst-storage", features = [
  "sqlite",
] }
cloud-database = { path = "../../src-OctoBase/libs/cloud-database", features = [
  "sqlite",
] }
project-root = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8.3"
