[package]
name = "ipc_types"
version = "0.1.0"

[dependencies]
cloud-database = { git = "https://github.com/toeverything/OctoBase", rev = "5f1162b", features = [
  "sqlite",
] }
jwst-storage = { git = "https://github.com/toeverything/OctoBase", rev = "5f1162b", features = [
  "sqlite",
] }
project-root = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8.3"
